// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThanosGrove [sanpshot] after decimation 1`] = `
<div>
  <div
    class="ThanosGrove_container_1ummv"
    data-testid="grove"
  >
    <img
      alt="thanos grove"
      class="ThanosGrove_img_2AS2q"
      height="80px"
      src="https://www.google.com/logos/fnbx/thanos/thanos_idle.png"
      width="80px"
    />
    <div
      class="ThanosGrove_screen_32q9N"
    >
      <div
        class="ThanosGrove_film_2lKBj"
        style="width: 3840px; background-image: url(https://www.google.com/logos/fnbx/thanos/thanos_time.png); transform: translateX(-3840px);"
      />
      <audio
        controls=""
        hidden=""
      >
        <source
          src="https://www.google.com/logos/fnbx/thanos/thanos_reverse_sound.mp3"
          type="audio/mpeg"
        />
      </audio>
    </div>
  </div>
</div>
`;

exports[`ThanosGrove [sanpshot] before decimation 1`] = `
<div>
  <div
    class="ThanosGrove_container_1ummv"
    data-testid="grove"
  >
    <img
      alt="thanos grove"
      class="ThanosGrove_img_2AS2q"
      height="80px"
      src="https://www.google.com/logos/fnbx/thanos/thanos_idle.png"
      width="80px"
    />
    <div
      class="ThanosGrove_screen_32q9N"
    >
      <div
        class="ThanosGrove_film_2lKBj"
        style="width: 3840px; background-image: url(https://www.google.com/logos/fnbx/thanos/thanos_snap.png);"
      />
      <audio
        controls=""
        hidden=""
      >
        <source
          src="https://www.google.com/logos/fnbx/thanos/thanos_snap_sound.mp3"
          type="audio/mpeg"
        />
      </audio>
    </div>
  </div>
</div>
`;
